--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@
         </div>
         <div class="project-grid2">
           <a
-            href="https://codewithmehr.github.io/yoga-landing-page/"
+            href="https://codewithmehr.github.io/Flower-Shop/"
             target="_blank"
           >
-            <img class="ss" src="img/ss.png" alt="project" />
+            <img class="ss" src="img/ss-0.png" alt="project" />
             <div class="overlay">
-              <h1>Yoga-Landing-Page</h1>
-              <p>(HTML,CSS,JavaScript)</p>
+              <h1>Flower-Shop</h1>
+              <p>(HTML,CSS,jQuery)</p>
             </div>
           </a>
         </div>
