--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
           <li>Bootstrap</li>
           <li>Tailwind</li>
           <li>Javascript</li>
+           <li>jQuery</li>
           <li>Git</li>
           <li>Github</li>
         </ul>
