--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
       <div class="projects-grid">
         <div class="project-grid1">
           <a
-            href="https://codewithmehr.github.io/cafe-n-chill/"
+            href="https://codewithmehr.github.io/The-Royal-Table/"
             target="_blank"
           >
             <img class="ss" src="img/pg2.png" alt="project" />
             <div class="overlay">
-              <h1>CAFE-LANDING-PAGE</h1>
+              <h1>The-Royal-Table</h1>
               <p>(HTML,CSS,JavaScript)</p>
             </div>
           </a>
