adding react project

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="shortcut icon" href="img/favicon.ico?" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/fav2.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <title>MEHR HUSSAIN</title>
@@ -37,11 +37,11 @@
     </div>
     <section id="section1" data-aos="fade-in">
       <div class="section1-flex1">
-        <img src="img/round.png" alt="" id="profilePicture" />
+        <img src="img/testing6.png" alt="" id="profilePicture" />
       </div>
       <div class="section1-flex2">
         <p>
-          Hi, I'm Mehr, a <b>Front-End Web Developer </b>passionate about
+          Hi, I'm Mehr, a <b>Full Stack Web Developer </b>passionate about
           creating interactive applications and experiences on the web.
         </p>
       </div>
@@ -61,12 +61,12 @@
         <ul>
           <li>HTML</li>
           <li>CSS3</li>
-          <li>Bootstrap</li>
           <li>Tailwind</li>
           <li>Javascript</li>
-           <li>jQuery</li>
-          <li>Git</li>
-          <li>Github</li>
+          <li>jQuery</li>
+          <li>Java</li>
+          <li>Spring Boot</li>
+          <li>PostgreSQL</li>
         </ul>
       </div>
     </section>
@@ -78,6 +78,7 @@
           <a
             href="https://codewithmehr.github.io/The-Royal-Table/"
             target="_blank"
+            rel="noopener"
           >
             <img class="ss" src="img/pg2.png" alt="project" />
             <div class="overlay">
@@ -88,13 +89,14 @@
         </div>
         <div class="project-grid2">
           <a
-            href="https://codewithmehr.github.io/Flower-Shop/"
+            href="https://pokeapi-mehr-hussain.netlify.app/"
             target="_blank"
+            rel="noopener"
           >
-            <img class="ss" src="img/ss-0.png" alt="project" />
+            <img class="ss" src="img/pokeapi.png" alt="project" />
             <div class="overlay">
-              <h1>Flower-Shop</h1>
-              <p>(HTML,CSS,jQuery)</p>
+              <h1>PokeApi</h1>
+              <p>(React,API)</p>
             </div>
           </a>
         </div>
@@ -102,6 +104,7 @@
           <a
             href="https://codewithmehr.github.io/Interior-Design/"
             target="_blank"
+            rel="noopener"
           >
             <img class="ss" src="img/full2.png" alt="project" />
             <div class="overlay">
@@ -114,6 +117,7 @@
           <a
             href="https://codewithmehr.github.io/Interior-Design/"
             target="_blank"
+            rel="noopener"
           >
             <img class="ss" src="img/pg.png" alt="project" />
             <div class="overlay">
@@ -124,13 +128,14 @@
         </div>
         <div class="project-grid4">
           <a
-            href="https://codewithmehr.github.io/Holiday-Candles/"
+            href="https://codewithmehr.github.io/Flower-Shop/"
             target="_blank"
+            rel="noopener"
           >
-            <img class="ss" src="img/ss-1.png" alt="project" />
+            <img class="ss" src="img/ss-0.png" alt="project" />
             <div class="overlay">
-              <h1>Holiday-Candles</h1>
-              <p>(HTML,Tailwind)</p>
+              <h1>Flower-Shop</h1>
+              <p>(HTML,CSS,jQuery)</p>
             </div>
           </a>
         </div>
@@ -138,6 +143,7 @@
           <a
             href="https://codewithmehr.github.io/Burger-House-landing-page/"
             target="_blank"
+            rel="noopener"
           >
             <img class="ss" src="img/ss3.png" alt="project" />
             <div class="overlay">
@@ -156,6 +162,7 @@
           <a
             href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSHxwCmJHDXvzdTgjXznQHzcRgFzbbwbPGdgrXQMPKVHmrCNwwRZXDVwSFSLFTVNsKcPmlSJ"
             target="_blank"
+            rel="noopener"
             >mehrunissapirwani116@gmail.com</a
           >
         </li>
@@ -164,21 +171,22 @@
           <a
             href="https://www.linkedin.com/in/mehrunissa-pirwani-b856ab241"
             target="_blank"
+            rel="noopener"
             >Mehrunissa Pirwani</a
           >
         </li>
         <li>
           Twitter:
-          <a href="https://twitter.com/codeWithMehr" target="_blank"
+          <a href="https://twitter.com/codeWithMehr" target="_blank" rel="noopener"
             >@codeWithMehr</a
           >
         </li>
-        <li>
+        <!-- <li>
           Github:
-          <a href="https://github.com/codewithMehr" target="_blank"
+          <a href="https://github.com/codewithMehr" target="_blank" rel="noopener"
             >codeWithMehr</a
           >
-        </li>
+        </li> -->
       </ul>
     </section>
 
